--- a/printer.cfg
+++ b/printer.cfg
@@ -243,7 +243,7 @@ lift_speed: 5
 #   issue any commands here that move the toolhead. The default is to
 #   not run any special G-Code commands on deactivation.
 
-[bed_screws] # https://www.klipper3d.org/Config_Reference.html?h=bed_sc#bed_screws
+#[bed_screws] # https://www.klipper3d.org/Config_Reference.html?h=bed_sc#bed_screws
 #screw1:
 #   The X, Y coordinate of the first bed leveling screw. This is a
 #   position to command the nozzle to that is directly above the bed
