minor changes to startup script including mesh load

--- a/custom-scripts.cfg
+++ b/custom-scripts.cfg
@@ -37,8 +37,8 @@ gcode:
   G1 Z10.0 F3000 ;Move Z Axis up
   G1 X0 Y0;
   G1 E10.0 F1800
-  G1 Z0.28 F5000.0 ;Move to start position
-  G1 X220 Y0 Z0.28 F1500.0 E30 ;Draw the first line
+  G1 Z0.3 F5000.0 ;Move to start position
+  G1 X220 Y0 Z0.3 F1500.0 E30 ;Draw the first line
   G92 E0 ;Reset Extruder
   G1 Z10 F3000 ;Move Z Axis up
   RESTORE_GCODE_STATE NAME=Pre_Prime
@@ -60,12 +60,14 @@ gcode:
     SET_GCODE_OFFSET Z=0.0
     # Home the printer
     G28
+    # load default mesh
+    BED_MESH_PROFILE LOAD=default
     # Move to 0/0 position if probe present to not leak into the bed center
     G1 X0 Y0 F3000
     # Move the nozzle near the bed
     G1 Z5 F3000
     # Move the nozzle very close to the bed
-    G1 Z0.15 F300
+    G1 Z0.3 F300
     # Wait for bed to reach temperature
     M190 S{BED_TEMP}
     # Set and wait for nozzle to reach temperature
