--- a/printer.cfg
+++ b/printer.cfg
@@ -44,6 +44,7 @@ endstop_pin: probe:z_virtual_endstop
 #position_endstop: 0.5
 position_max: 240
 homing_speed: 20
+position_min: -2
 
 [extruder]
 step_pin: PB1
@@ -330,16 +331,16 @@ speed: 100
 #*# pid_kd = 1536.053
 #*#
 #*# [probe]
-#*# z_offset = 1.551
+#*# z_offset = 1.910
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.023333, 0.279167, 0.277500, 0.155833, 0.120833
-#*# 	  -0.029167, 0.200000, 0.154167, 0.066667, 0.070000
-#*# 	  -0.154167, 0.135000, 0.126667, -0.011667, 0.008333
-#*# 	  -0.296667, 0.089167, 0.060833, -0.010000, 0.043333
-#*# 	  -0.385000, 0.094167, 0.111667, 0.007500, 0.106667
+#*# 	-0.322500, 0.187500, 0.197500, 0.129167, 0.143333
+#*# 	-0.615833, -0.035833, -0.030000, -0.096667, -0.067500
+#*# 	-0.931667, -0.153333, -0.140833, -0.265833, -0.230833
+#*# 	-1.216667, -0.190000, -0.180833, -0.241667, -0.170833
+#*# 	-1.401667, -0.186667, -0.136667, -0.214167, -0.109167
 #*# x_count = 5
 #*# y_count = 5
 #*# mesh_x_pps = 2
